# yavin-ai

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT_UPDATE.md  Dockerfile  LAUNCH_GUIDE.md  PROJECT_SUMMARY.md  Procfile  QUICKSTART.md  README.md  THUMBNAIL-GUIDE.md  deep.html  ethics.html  fly.toml  foundations.html  glossary.html  index.html  learning.html  mission.html  modern.html  neural.html  railway.toml  render.yaml  schema.sql  script.js  sequential.html  styles.css  yavin-thumbnail-maker.html
src/: main.rs
static/css/: interactive-features.css  styles.css
static/js/: interactive-features.js
templates/: base.html  deep.html  ethics.html  foundations.html  glossary.html  index.html  learning.html  mission.html  modern.html  neural.html  playground.html  sequential.html
