[package]
name = "yavin-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

