[package]
name = "yavin-ai"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
actix-session = { version = "0.9", features = ["cookie-session"] }
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

